--- a/10_neural_nets_with_keras.ipynb
+++ b/10_neural_nets_with_keras.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2324,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2586,7 +2586,7 @@
     "# extra code\n",
     "\n",
     "if \"google.colab\" in sys.modules:\n",
-    "    from google.colab import output\n",
+    "    from google.colab import output # type: ignore\n",
     "\n",
     "    output.serve_kernel_port_as_window(6006)\n",
     "else:\n",
