--- a/19_training_and_deploying_at_scale.ipynb
+++ b/19_training_and_deploying_at_scale.ipynb
@@ -844,10 +844,10 @@
     "project_id = \"my_project\"  ##### CHANGE THIS TO YOUR PROJECT ID #####\n",
     "\n",
     "if \"google.colab\" in sys.modules:\n",
-    "    from google.colab import auth\n",
+    "    from google.colab import auth # type: ignore\n",
     "    auth.authenticate_user()\n",
     "elif \"kaggle_secrets\" in sys.modules:\n",
-    "    from kaggle_secrets import UserSecretsClient\n",
+    "    from kaggle_secrets import UserSecretsClient # type: ignore\n",
     "    UserSecretsClient().set_gcloud_credentials(project=project_id)\n",
     "else:\n",
     "    os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"] = \"my_service_account_key.json\""
@@ -3027,7 +3027,7 @@
     }
    ],
    "source": [
-    "from aiplatform.schema.dataset.ioformat.image import single_label_classification\n",
+    "from aiplatform.schema.dataset.ioformat.image import single_label_classification # type: ignore\n",
     "\n",
     "mnist_dataset = aiplatform.ImageDataset.create(\n",
     "    display_name=\"mnist-dataset\",\n",
